tests/baselines/reference/ArrowFunction3.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ArrowFunctions/ArrowFunction3.ts(1,14): error TS1110: Type expected.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ArrowFunctions/ArrowFunction3.ts (1 errors) ====
    var v = (a): => {
                 ~~
!!! error TS1110: Type expected.
       
    };